test_somatt_model

--- a/pancan/test.ipynb
+++ b/pancan/test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dandreas/.conda/envs/deepV_a100/lib/python3.10/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
@@ -27,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2812295/3534989332.py:2: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2239204/3534989332.py:2: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  maf = pd.read_csv('mc3.v0.2.8.PUBLIC.maf',sep='\\t')\n"
      ]
     }
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +574,7 @@
        "[3600963 rows x 114 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,20 +586,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Hugo_Symbol', 'Entrez_Gene_Id', 'Center', 'NCBI_Build', 'Chromosome',\n",
-      "       'Start_Position', 'End_Position', 'Strand', 'Variant_Classification',\n",
-      "       'Variant_Type',\n",
-      "       ...\n",
-      "       'ExAC_AF_NFE', 'ExAC_AF_OTH', 'ExAC_AF_SAS', 'GENE_PHENO', 'FILTER',\n",
-      "       'COSMIC', 'CENTERS', 'CONTEXT', 'DBVS', 'NCALLERS'],\n",
-      "      dtype='object', length=114)\n",
       "nunique 10295\n",
       "['TCGA-02-0003-01A-01D-1490-08' 'TCGA-02-0033-01A-01D-1490-08'\n",
       " 'TCGA-02-0047-01A-01D-1490-08' ... 'TCGA-ZT-A8OM-01A-11D-A428-09'\n",
@@ -617,37 +619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m maf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTumor_Sample_Barcode\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique():\n\u001b[1;32m      2\u001b[0m     j \u001b[38;5;241m=\u001b[39m i[:\u001b[38;5;241m12\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m maf[maf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTumor_Sample_Barcode\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mstr\u001b[38;5;241m.\u001b[39mcontains(j)][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTumor_Sample_Barcode\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mnunique() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "for i in maf['Tumor_Sample_Barcode'].unique():\n",
-    "    j = i[:12]\n",
-    "    assert maf[maf['Tumor_Sample_Barcode'].str.contains(j)]['Tumor_Sample_Barcode'].nunique() == 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2812295/3845924749.py:1: DtypeWarning: Columns (8,9,27,42,44,45,46,47,48,49,50,51,52,53,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,298,299,300,301,302,303,304,305,306,307,308,309,310,311,312,313,314,315,316,317,318,319,320,321,322,323,324,325,326,327,328,329,330,333,334,335,336,338,339,340,341,342,343,344,345,346,347,348,349,350,351,352,353,354,355,356,357,358,359,360,361,362,363,364,365,366,367,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384,385,386,387,388,389,390,391,392,393,394,395,396,397,398,399,400,401,402,403,404,405,406,407,408,409,410,411,412,413,414,415,416,417,418,419,420,421,422,423,424,425,426,427,428,429,430,431,432,433,434,435,436,437,438,439,440,441,442,443,444,445,446,447,448,449,450,451,452,453,454,455,456,457,458,459,460,461,462,463,464,465,466,467,468,469,470,471,472,473,474,475,476,477,478,479,480,481,482,483,484,485,486,487,488,489,490,491,492,493,494,495,496,497,498,499,500,501,502,503,504,505,506,507,508,509,510,511,512,513,514,515,516,517,518,519,520,521,522,523,524,525,526,527,528,529,530,531,532,533,534,535,536,537,538,539,540,541,542,543,544,545,546,547,548,549,550,551,552,553,554,555,556,557,558,559,560,561,562,563,564,565,566,567,568,569,570,571,572,573,574,575,576,577,578,579,580,581,582,583,584,585,586,587,588,589,590,591,592,593,594,595,596,597,598,599,600,601,602,603,604,605,606,607,608,609,610,611,612,613,614,615,616,617,618,619,620,621,622,623,624,625,626,627,628,629,630,631,632,633,634,635,636,637,639,640,641,642,643,644,645,646,647,648,649,650,651,652,653,654,655,656,657,658,659,660,661,662,663,664,665,666,667,668,669,670,671,672,673,674,675,676,677,678,679,680,681,682,683,684,685,686,687,688,689,690,691,692,693,694,695,696,697,698,699,700,701,702,703,704,705,706,707,708,709,710,711,712,713,714,715,716,717,718,719,720,721,722,723,724,725,726,727,728,729,730,731,732,733,734,735,736,737,738,739,740,741,742,743,744) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2012970/3845924749.py:1: DtypeWarning: Columns (8,9,27,42,44,45,46,47,48,49,50,51,52,53,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,298,299,300,301,302,303,304,305,306,307,308,309,310,311,312,313,314,315,316,317,318,319,320,321,322,323,324,325,326,327,328,329,330,333,334,335,336,338,339,340,341,342,343,344,345,346,347,348,349,350,351,352,353,354,355,356,357,358,359,360,361,362,363,364,365,366,367,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384,385,386,387,388,389,390,391,392,393,394,395,396,397,398,399,400,401,402,403,404,405,406,407,408,409,410,411,412,413,414,415,416,417,418,419,420,421,422,423,424,425,426,427,428,429,430,431,432,433,434,435,436,437,438,439,440,441,442,443,444,445,446,447,448,449,450,451,452,453,454,455,456,457,458,459,460,461,462,463,464,465,466,467,468,469,470,471,472,473,474,475,476,477,478,479,480,481,482,483,484,485,486,487,488,489,490,491,492,493,494,495,496,497,498,499,500,501,502,503,504,505,506,507,508,509,510,511,512,513,514,515,516,517,518,519,520,521,522,523,524,525,526,527,528,529,530,531,532,533,534,535,536,537,538,539,540,541,542,543,544,545,546,547,548,549,550,551,552,553,554,555,556,557,558,559,560,561,562,563,564,565,566,567,568,569,570,571,572,573,574,575,576,577,578,579,580,581,582,583,584,585,586,587,588,589,590,591,592,593,594,595,596,597,598,599,600,601,602,603,604,605,606,607,608,609,610,611,612,613,614,615,616,617,618,619,620,621,622,623,624,625,626,627,628,629,630,631,632,633,634,635,636,637,639,640,641,642,643,644,645,646,647,648,649,650,651,652,653,654,655,656,657,658,659,660,661,662,663,664,665,666,667,668,669,670,671,672,673,674,675,676,677,678,679,680,681,682,683,684,685,686,687,688,689,690,691,692,693,694,695,696,697,698,699,700,701,702,703,704,705,706,707,708,709,710,711,712,713,714,715,716,717,718,719,720,721,722,723,724,725,726,727,728,729,730,731,732,733,734,735,736,737,738,739,740,741,742,743,744) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  fu = pd.read_csv('clinical_PANCAN_patient_with_followup.tsv',sep='\\t', encoding='latin1')\n"
      ]
     },
@@ -1420,82 +1399,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nunique 56\n",
-      "['2000' '2004' '2008' '2006' '2009' '2011' '2010' '2001' '2005' '2007'\n",
-      " '2012' '2002' '2003' '1998' '1997' '2013' '1999' '[Not Available]' '1995'\n",
-      " '1988' '1990' '1992' '1994' '1996' '1989' '1991' '1993' '1987' 2009 2010\n",
-      " 2012 2013 2008 2007 2011 2006 2005 2003 2004 1999 2000 2001 2002 1998\n",
-      " 1996 1994 1993 1997 1995 1992 '1985' '1982' '1984' '1979' '1986' '1978']\n",
-      "year_of_initial_pathologic_diagnosis\n",
-      "2011               1502\n",
-      "2012               1267\n",
-      "2010               1200\n",
-      "2009                885\n",
-      "2013                826\n",
-      "2008                816\n",
-      "2007                636\n",
-      "2006                545\n",
-      "2005                430\n",
-      "2004                351\n",
-      "2003                263\n",
-      "2002                234\n",
-      "2001                191\n",
-      "2010                169\n",
-      "2000                147\n",
-      "[Not Available]     129\n",
-      "2009                117\n",
-      "1999                107\n",
-      "2011                107\n",
-      "2012                 93\n",
-      "2008                 88\n",
-      "1998                 88\n",
-      "1997                 75\n",
-      "2007                 67\n",
-      "2005                 62\n",
-      "2006                 61\n",
-      "1996                 60\n",
-      "2013                 58\n",
-      "1995                 53\n",
-      "2004                 45\n",
-      "1994                 42\n",
-      "2003                 28\n",
-      "1992                 25\n",
-      "1993                 24\n",
-      "2002                 23\n",
-      "2000                 22\n",
-      "1999                 19\n",
-      "2001                 17\n",
-      "1998                 12\n",
-      "1994                  8\n",
-      "1997                  8\n",
-      "1996                  8\n",
-      "1995                  7\n",
-      "1991                  7\n",
-      "1990                  7\n",
-      "1987                  6\n",
-      "1989                  5\n",
-      "1993                  4\n",
-      "1988                  3\n",
-      "1984                  2\n",
-      "1986                  2\n",
-      "1992                  1\n",
-      "1985                  1\n",
-      "1982                  1\n",
-      "1979                  1\n",
-      "1978                  1\n",
-      "Name: count, dtype: int64\n"
+      "nunique 169\n",
+      "['C74.0' 'C67.4' 'C67.2' 'C67.9' 'C67.0' 'C67.1' 'C67.3' 'C67.5' 'C67.6'\n",
+      " 'C50.9' 'C50.919' 'C50.5' 'C50.2' 'C50.3' 'C50.8' 'C50.4' 'C53.9' 'C53.0'\n",
+      " 'C53.1' 'C56.9' '[Not Available]' 'C22.1' 'C24.0' 'C22.0' 'C18.0' 'C18.2'\n",
+      " 'C18.6' 'C18.7' 'C18.9' 'C18.4' 'C18.3' 'C18.5' 'C19' 'C83.3' 'C48.1'\n",
+      " 'C38.1' 'C08.0' 'C49.0' 'C77.1' 'C62.90' 'C71.7' 'C71.6' 'C15.5' 'C15.9'\n",
+      " 'C15.4' 'C15.3' 'C16.0' 'C71.9' 'C71.4' 'C71.1' 'C71.8' 'C71.2' 'C02.9'\n",
+      " 'C32.9' 'C04.9' 'C06.0' 'C14.8' 'C09.9' 'C01' 'C10.3' 'C10.9' 'C32.1'\n",
+      " 'C03.9' 'C13.9' 'C06.9' 'C05.0' 'C05.9' 'C04.0' 'C02.2' 'C41.1' 'C02.1'\n",
+      " 'C00.9' 'C06.2' 'C03.0' 'C03.1' 'C64.9' 'C64.1' 'C71.0' 'C71.3' 'C34.3'\n",
+      " 'C34.1' 'C34.2' 'C34.9' 'C34.30' 'C34.0' 'C34.8' 'C34.12' 'C34.10'\n",
+      " 'C45.0' 'C34.90' 'C38.4' 'C48.0' 'C48.2' 'C25.0' 'C25.8' 'C25.1' 'C25.9'\n",
+      " 'C25.2' 'C74.9' 'C74.1' 'C49.3' 'C76.1' 'C49.6' 'C38.0' 'C76.0' 'C49.4'\n",
+      " 'C49.5' 'C75.5' 'C72.9' 'C38.3' 'C61' 'C61.9' 'C20' 'C80.1' 'C49.1'\n",
+      " 'C49.2' 'C55' 'C63.1' 'C40.3' 'C49.9' 'C49.8' 'C49.10' 'C16.9' 'C54.9'\n",
+      " 'C40.2' 'C54.2' 'C54.0' 'C70.1' 'C47.1' 'C44.5' 'C77.3' 'C77.0' 'C44.9'\n",
+      " 'C44.601' 'C44.50' 'C44.701' 'C77.9' 'C77.4' 'C77.5' 'C44.6' 'C17.9'\n",
+      " 'C44.31' 'C44.3' 'C44.7' 'C44.4' 'C51.9' 'C43.51' 'C44.2' 'C76.2' 'C52'\n",
+      " 'C07' 'C76.3' 'C72.0' 'C41.0' 'C77.2' 'C49.20' 'C54.1' 'C16.5' 'C16.2'\n",
+      " 'C16.1' 'C16.3' 'C62.9' 'C73' 'C37' 'C54.3' 'C69.80' 'C69.30' 'C69.40'\n",
+      " 'C69.90']\n",
+      "icd_10\n",
+      "C50.9     1090\n",
+      "C64.9      652\n",
+      "C71.9      652\n",
+      "C56.9      582\n",
+      "C34.1      577\n",
+      "          ... \n",
+      "C05.9        1\n",
+      "C44.50       1\n",
+      "C10.3        1\n",
+      "C71.8        1\n",
+      "C69.90       1\n",
+      "Name: count, Length: 169, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "inspect(fu,'year_of_initial_pathologic_diagnosis')"
+    "inspect(fu,'icd_10')"
    ]
   },
   {
