--- a/muat/vcf.ipynb
+++ b/muat/vcf.ipynb
@@ -13,14 +13,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dandreas/.conda/envs/deepV_a100/lib/python3.10/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -28,7 +20,33 @@
       "loading data from ../data_processing/consolidated_data.pkl\n",
       "loading data from ../data_processing/dna_seq_by_hgncId.pkl\n",
       "loading data from ../aa/canonical_ref.pkl\n",
-      "loading data from ../aa/canonical_mut.pkl\n",
+      "loading data from ../aa/canonical_mut.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from io import StringIO\n",
+    "import gzip\n",
+    "import numpy as np\n",
+    "from saveAndLoad import *\n",
+    "\n",
+    "tumors = pickleLoad('../aa/tumors.pkl')\n",
+    "data = pickleLoad('../data_processing/consolidated_data.pkl')\n",
+    "seqs = pickleLoad('../data_processing/dna_seq_by_hgncId.pkl')\n",
+    "ref_aa = pickleLoad('../aa/canonical_ref.pkl')\n",
+    "mut_aa = pickleLoad('../aa/canonical_mut.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "##fileformat=VCFv4.1\n",
       "#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO\n",
       "1\t115256529\t.\tT\tC\t.\t.\tVariant_Classification=Missense_Mutation\n",
@@ -53,18 +71,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from io import StringIO\n",
-    "import gzip\n",
-    "import numpy as np\n",
-    "from saveAndLoad import *\n",
-    "\n",
-    "tumors = pickleLoad('../aa/tumors.pkl')\n",
-    "data = pickleLoad('../data_processing/consolidated_data.pkl')\n",
-    "seqs = pickleLoad('../data_processing/dna_seq_by_hgncId.pkl')\n",
-    "ref_aa = pickleLoad('../aa/canonical_ref.pkl')\n",
-    "mut_aa = pickleLoad('../aa/canonical_mut.pkl')\n",
-    "\n",
     "def parse_chrom(chrom):\n",
     "    \"\"\"\n",
     "    Convert chromosome strings into numeric values for sorting.\n",
@@ -79,7 +85,8 @@
     "    else:\n",
     "        return int(c)  # e.g., '1' -> 1, '10' -> 10\n",
     "\n",
-    "def to_vcf(tumors, barcode, data, seqs, ref_aa, mut_aa, save=False):\n",
+    "def to_vcf(tumors, barcode, data, seqs, ref_aa, mut_aa, save=False, snv_only=False, gz = True, vcf = True, out_folder_0 = \"/data/dandreas/SomaticMutationsLLM/vcf_1_00percentMinCancerType/\"):\n",
+    "    \n",
     "    # Collect all final VCF rows before sorting\n",
     "    unsorted_records = []\n",
     "\n",
@@ -141,19 +148,40 @@
     "    output = []\n",
     "    output.append(\"##fileformat=VCFv4.1\")\n",
     "    output.append(\"#CHROM\\tPOS\\tID\\tREF\\tALT\\tQUAL\\tFILTER\\tINFO\")\n",
+    "    output0 = output.copy()\n",
     "\n",
     "    for (chrom, pos, record_id, ref, alt, qual, vcf_filter, info) in sorted_records:\n",
+    "        snv = len(ref) == 1 and len(alt) == 1\n",
+    "        if snv_only and not snv: continue\n",
     "        vcf_line = \"\\t\".join([chrom, str(pos), record_id, ref, alt, qual, vcf_filter, info])\n",
     "        output.append(vcf_line)\n",
+    "\n",
+    "    if output == output0: return None\n",
     "\n",
     "    # Join into a single text block\n",
     "    vcf_content = \"\\n\".join(output) + \"\\n\"\n",
     "\n",
     "    # Optionally save as gzipped VCF\n",
     "    if save:\n",
-    "        out_path = f\"/data/dandreas/SomaticMutationsLLM/vcf_1_00percentMinCancerType/{barcode}.vcf.gz\"\n",
-    "        with gzip.open(out_path, \"wt\") as gz_out:\n",
-    "            gz_out.write(vcf_content)\n",
+    "        out_folder_0 = out_folder_0\n",
+    "        out_file_0 = f\"{barcode}\"\n",
+    "        if snv_only: \n",
+    "            out_file_0 = out_file_0 + '_snv'\n",
+    "            out_folder_0 = out_folder_0.replace(\"pe/\", \"pe_snv/\")\n",
+    "        if gz:\n",
+    "            out_folder = out_folder_0[:-1] + \"_gz/\"\n",
+    "            out_file = out_file_0 + \".vcf.gz\"\n",
+    "            out_path = out_folder + out_file\n",
+    "            ensureDirectoryExists(out_folder)\n",
+    "            with gzip.open(out_path, \"wt\") as gz_out:\n",
+    "                gz_out.write(vcf_content)\n",
+    "        if vcf:\n",
+    "            out_folder = out_folder_0[:-1] + \"_vcf/\"\n",
+    "            out_file = out_file_0 + \".vcf\"\n",
+    "            out_path = out_folder + out_file\n",
+    "            ensureDirectoryExists(out_folder)\n",
+    "            with open(out_path.replace(\".gz\", \"\"), \"w\") as vcf_out:\n",
+    "                vcf_out.write(vcf_content)\n",
     "\n",
     "    return vcf_content\n",
     "\n",
@@ -163,7 +191,8 @@
     "# -------------------------------------------------\n",
     "\n",
     "barcode = 'GENIE-JHU-00006-00185'\n",
-    "vcf_string = to_vcf(tumors, barcode, data, seqs, ref_aa, mut_aa, save=True)\n",
+    "# barcode = 'GENIE-PROV-e940916f5e-94747919c3' #None\n",
+    "vcf_string = to_vcf(tumors, barcode, data, seqs, ref_aa, mut_aa, save=False, snv_only=True, gz=True, vcf=True)\n",
     "print(vcf_string)"
    ]
   },
@@ -271,23 +300,79 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "166854"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 143530/143530 [02:18<00:00, 1034.09it/s]\n"
+     ]
     }
    ],
    "source": [
-    "len(filenames)"
+    "## SNV ONLY\n",
+    "from tqdm import tqdm\n",
+    "class_data = pd.read_csv('../labeled_data/data_1_00percentMinCancerType.csv')\n",
+    "barcodes = class_data['barcode'].values\n",
+    "\n",
+    "folder = '/data/dandreas/SomaticMutationsLLM/vcf_for_cosmic_test/'\n",
+    "for n,barcode in tqdm(enumerate(barcodes),total=len(barcodes)):\n",
+    "    f = folder + f'{int(n/1000)}/'\n",
+    "    vcf_string = to_vcf(tumors, barcode, data, seqs, ref_aa, mut_aa, save=True, gz = False, snv_only=True, out_folder_0 = f)\n",
+    "    if vcf_string is None: continue\n",
+    "    x = pd.read_csv(StringIO(vcf_string), sep='\\t', skiprows=1)\n",
+    "    all_ref = x['REF'].apply(lambda x: len(x) == 1).all()\n",
+    "    all_alt = x['ALT'].apply(lambda x: len(x) == 1).all()\n",
+    "    assert all_ref and all_alt\n",
+    "\n",
+    "# path = '/data/dandreas/SomaticMutationsLLM/vcf_1_00percentMinCancerType_snv_gz/'\n",
+    "# filenames = os.listdir(path)\n",
+    "# with open('/data/dandreas/SomaticMutationsLLM/filenames_vcf_1_00percentMinCancerType_snv.tsv', 'w') as f:\n",
+    "#     f.write('path\\n')\n",
+    "#     for filename in filenames:\n",
+    "#         f.write(f'{path}{filename}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14353/14353 [00:13<00:00, 1040.38it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## SNV ONLY 10% SUBSET\n",
+    "from tqdm import tqdm\n",
+    "class_data = pd.read_csv('../labeled_data/data_1_00percentMinCancerType.csv')\n",
+    "barcodes = class_data['barcode'].values\n",
+    "\n",
+    "folder = '/data/dandreas/SomaticMutationsLLM/vcf_for_cosmic_10percent/'\n",
+    "barcodes_subset = np.random.choice(barcodes, int(len(barcodes)/10), replace=False)\n",
+    "for n,barcode in tqdm(enumerate(barcodes_subset),total=len(barcodes_subset)):\n",
+    "    f = folder #+ f'{int(n/1000)}/'\n",
+    "    vcf_string = to_vcf(tumors, barcode, data, seqs, ref_aa, mut_aa, save=True, gz = False, snv_only=True, out_folder_0 = f)\n",
+    "    if vcf_string is None: continue\n",
+    "    x = pd.read_csv(StringIO(vcf_string), sep='\\t', skiprows=1)\n",
+    "    all_ref = x['REF'].apply(lambda x: len(x) == 1).all()\n",
+    "    all_alt = x['ALT'].apply(lambda x: len(x) == 1).all()\n",
+    "    assert all_ref and all_alt\n",
+    "\n",
+    "# path = '/data/dandreas/SomaticMutationsLLM/vcf_1_00percentMinCancerType_snv_gz/'\n",
+    "# filenames = os.listdir(path)\n",
+    "# with open('/data/dandreas/SomaticMutationsLLM/filenames_vcf_1_00percentMinCancerType_snv.tsv', 'w') as f:\n",
+    "#     f.write('path\\n')\n",
+    "#     for filename in filenames:\n",
+    "#         f.write(f'{path}{filename}\\n')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deepV_a100",
+   "display_name": "esm3",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
